# mpc-qt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  QScreenSaver.cpp  QScreenSaver.h  README.md  actioneditor.cpp  actioneditor.h  bintray.json  drawnplaylist.cpp  drawnplaylist.h  drawnslider.cpp  drawnstatus.cpp  drawnstatus.h  favoriteswindow.cpp  favoriteswindow.h  favoriteswindow.ui  filterwindow.cpp  filterwindow.h  filterwindow.ui  generate-localinstall-desktop.py  gotowindow.cpp  gotowindow.h  helpers.cpp  helpers.h  hostwindow.cpp  hostwindow.h  hostwindow.ui  io.github.mpc-qt.mpc-qt.desktop  io.github.mpc_qt.Mpc-Qt.appdata.xml  io.github.mpc_qt.mpc-qt.appdata.xml  io.github.mpc_qt.mpc-qt.desktop  ipc.cpp  ipc.h  ipcjson.cpp  ipcjson.h  ipcmpris.cpp  ipcmpris.h  lconvert.pri  (+60 more)
.github/actions/commands/check_stop/: action.yml
.github/actions/commands/remove_settings/: action.yml
.github/actions/commands/upload_screenshots/: action.yml
.github/actions/data/: VERSION  settings.json  test.mkv
.github/actions/data/build_options/: ffmpeg_options  mpv_options
.github/actions/data/mpv-build/: use-libass-release
.github/actions/linux/commands/check_if_file_exists/: action.yml
.github/actions/linux/commands/check_if_running/: action.yml
.github/actions/linux/commands/kill_mpc-qt/: action.yml
.github/actions/linux/commands/run_mpc-qt/: action.yml
.github/actions/linux/commands/screenshot/: action.yml
.github/actions/linux/commands/start_xvfb/: action.yml
.github/actions/linux/tests/start/: action.yml
.github/actions/linux/tests/start_with_config/: action.yml
.github/actions/linux/tests/start_with_config_video/: action.yml
.github/actions/windows/commands/check_if_file_exists/: action.yml
.github/actions/windows/commands/check_if_running/: action.yml
.github/actions/windows/commands/kill_mpc-qt/: action.yml
.github/actions/windows/commands/run_mpc-qt/: action.yml
.github/actions/windows/commands/screenshot/: action.yml
.github/actions/windows/tests/start/: action.yml
.github/actions/windows/tests/start_with_config_video/: action.yml
.github/workflows/: appimage.yml  flatpak.yml  linux.yml  linux_tests.yml  mpc-qt.yml  release.yml  windows-msys2.yml  windows_tests.yml
.tx/: config
AppImage/: AppRun
DOCS/: coding standards.md  ipc.md
data/: io.github.mpc_qt.mpc-qt.desktop  io.github.mpc_qt.mpc-qt.metainfo.xml  io.github.mpc_qt.mpc-qt_enqueue.desktop
http/: index.html
ipc/: http.cpp  http.h  json.cpp  mpris.cpp  mpris.h
packaging/flatpak/: io.github.mpc_qt.mpc-qt.yml
packaging/nsis/: mpc-qt.nsi  mpc-qt.nsi.in
packaging/nsis/mpc-qt-assoc/: mpc-qt-assoc-install.bat  mpc-qt-assoc-uninstall.bat
platform/: devicemanager.cpp  devicemanager.h  devicemanager_mac.cpp  devicemanager_mac.h  devicemanager_unix.cpp  devicemanager_unix.h  devicemanager_win.cpp  devicemanager_win.h  mac_qscreensaver.cpp  mac_qscreensaver.h  mpc-qt.rc.in  qabstractscreensaver.cpp  qabstractscreensaver.h  qscreensaver_mac.cpp  qscreensaver_mac.h  qscreensaver_unix.cpp  qscreensaver_unix.h  qscreensaver_win.cpp  qscreensaver_win.h  resources_paths.h  screensaver.cpp  screensaver.h  screensaver_mac.cpp  screensaver_mac.h  screensaver_unix.cpp  screensaver_unix.h  screensaver_win.cpp  screensaver_win.h  unify.cpp  unify.h  unix_qscreensaver.cpp  unix_qscreensaver.h  win_qscreensaver.cpp  win_qscreensaver.h  windowmanager.cpp  windowmanager.h
res/: CMakeLists.txt
res/http/: browser.html  info.html  variables.html
scripts/: make-release-linux.sh  make-release-msys2.sh  make-release-win.sh  make-win-icon.sh
src/: CMakeLists.txt  about.cpp  about.h  favoriteswindow.cpp  favoriteswindow.ui  gotowindow.cpp  gotowindow.h  gotowindow.ui  helpers.cpp  helpers.h  librarywindow.cpp  librarywindow.ui  logger.cpp  logger.h  logwindow.cpp  logwindow.ui  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  manager.cpp  manager.h  mpvwidget.cpp  mpvwidget.h  openfiledialog.cpp  openfiledialog.h  playlist.cpp  playlist.h  playlistwindow.cpp  playlistwindow.h  playlistwindow.ui  propertieswindow.cpp  propertieswindow.h  qthelper.hpp  settingswindow.cpp  settingswindow.h  settingswindow.ui  storage.cpp  thumbnailerwindow.cpp  (+2 more)
src/ipc/: http.cpp  http.h  json.cpp  mpris.cpp  mpris.h
src/platform/: devicemanager.cpp  devicemanager_unix.cpp  devicemanager_unix.h  devicemanager_win.cpp  mpc-qt.rc.in  screensaver.cpp  screensaver.h  screensaver_unix.cpp  screensaver_win.cpp  screensaver_win.h  unify.cpp  windowmanager.cpp  windowmanager.h
src/widgets/: actioneditor.cpp  actioneditor.h  drawncollection.cpp  drawnplaylist.cpp  drawnslider.cpp  drawnslider.h  drawnstatus.cpp  drawnstatus.h  logowidget.cpp  paletteeditor.cpp  paletteeditor.h  plainslider.cpp  plainslider.h  screencombo.cpp  screencombo.h  tooltip.cpp  tooltip.h  videopreview.cpp  videopreview.h
text/: encodeFormat.html  playlistFormat.html
translations/: mpc-qt_ar.ts  mpc-qt_ca.ts  mpc-qt_cs.ts  mpc-qt_de.ts  mpc-qt_en.ts  mpc-qt_es.ts  mpc-qt_fi.ts  mpc-qt_fr.ts  mpc-qt_id.ts  mpc-qt_it.ts  mpc-qt_ja.ts  mpc-qt_ko.ts  mpc-qt_nb_NO.ts  mpc-qt_nl.ts  mpc-qt_pl.ts  mpc-qt_pt.ts  mpc-qt_pt_BR.ts  mpc-qt_ru.ts  mpc-qt_ta.ts  mpc-qt_tr.ts  mpc-qt_ur.ts  mpc-qt_vi.ts  mpc-qt_zh_CN.ts
widgets/: actioneditor.cpp  actioneditor.h  drawncollection.cpp  drawncollection.h  drawnplaylist.cpp  drawnplaylist.h  drawnslider.cpp  drawnslider.h  drawnstatus.h  logowidget.cpp  logowidget.h  paletteeditor.cpp  paletteeditor.h  screencombo.cpp  screencombo.h  tooltip.cpp  tooltip.h  videopreview.cpp  videopreview.h
